# aliciadata-chat

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
migrations/: 001_create_tables.sql
prompts/: chat_system.mustache
src/: __init__.py  chat_service.py  database.py  main.py  prompt_loader.py
