[project]
name = "gradio-claude-chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pystache>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
